# splade-colBERT

./: .gitignore  .gitmodules  ColBERT_timing.ipynb  README.md  dataset.ipynb  pyproject.toml  torch_env.yaml  torch_env_cpu.yaml  viz_creation.ipynb
ColBERT/: conda_env.yml  retraining_attempt.ipynb
ColBERT/colbert/: searcher.py
ColBERT/colbert/data/: examples.py  ranking.py
ColBERT/colbert/distillation/: ranking_scorer.py  scorer.py
ColBERT/colbert/evaluation/: loaders.py
ColBERT/colbert/indexing/: collection_encoder.py  collection_indexer.py  utils.py
ColBERT/colbert/modeling/: checkpoint.py
ColBERT/colbert/search/: index_loader.py  index_storage.py
ColBERT/colbert/tests/: e2e_test.py
ColBERT/colbert/training/: lazy_batcher.py  training.py  utils.py
ColBERT/colbert/utilities/: annotate_em.py
ColBERT/colbert/utils/: distributed.py  utils.py
ColBERT/docs/: intro.ipynb
ColBERT/utility/evaluate/: annotate_EM.py  msmarco_passages.py
ColBERT/utility/rankings/: merge.py  split_by_queries.py
ColBERT/utility/supervision/: self_training.py  triples.py
ColBERT/utility/utils/: save_metadata.py
MSMARCO-Passage-Ranking-master/: GenerateData.script  README.md  makeidf.py
MSMARCO-Passage-Ranking-master/Baselines/data/: idf.tsv  idfnew.norm.tsv  (+1 more)
data/: triples.train.small.id.json
splade/: splade_attempt_2.ipynb
splade-d96f5f1710c0684992d05b91e04d7722da474305/splade/: all.py  flops.py  retrieve.py
splade/splade/: all.py  beir_eval.py  config_example_splade  create_anserini.py  evaluate.py  flops.py  index.py  retrieve.py  train.py
(+12 files in other folders)
