[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Ngo-Kevin <ngokevin16@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.23.1"
transformers = "^4.21.0"
datasets = "^2.4.0"
sentencepiece= "^0.1.96"
omegaconf = "^2.2.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
