[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Ngo-Kevin <ngokevin16@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.23.1"
transformers = "^4.21.0"
datasets = "^2.4.0"
sentencepiece= "^0.1.96"
omegaconf = "^2.2.3"
hydra-core = "^1.2.0"
numba = "^0.56.2"
h5py = "^3.7.0"
pytrec-eval-terrier = "^0.5.4"
tensorboard = "^2.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
